fixing title not showing

--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -96,7 +96,7 @@ h4+p {
   align-items: center;
 }
 
-h3 {
+.beaches h3 {
   color:white;
   font-weight: normal;
   margin:0;
